<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info"
    android:background="@color/black">

    <TextView
        android:id="@+id/text_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/color_conf_text_fondo"
        android:text="@string/text_info_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/color_conf_text_fondo"
        android:text="@string/text_info_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="15dp"
        android:maxWidth="300dp"
        app:layout_constraintTop_toBottomOf="@+id/text_info_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/btn_goto_main"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="90dp"
        android:text="@string/text_goto_main"
        android:textColor="@color/white"
        android:backgroundTint="@color/color_default_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_info" />


</androidx.constraintlayout.widget.ConstraintLayout>