<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ConfActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/text_title_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_conf_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Teléfono -->
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/text_conf_phone_selector"
        android:inputType="phone"
        android:textColorHint="@color/color_conf_text"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_title_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <!-- Ubicación -->
    <EditText
        android:id="@+id/edit_ubi"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/text_conf_ubi"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/color_conf_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <!-- Spinner -->
    <Spinner
        android:id="@+id/spinner_tiempo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/tiempos_array"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_ubi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <!-- RadioGroup -->
    <RadioGroup
        android:id="@+id/radioGroup_modo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_tiempo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_dados"
            android:text="Modo Dados"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <RadioButton
            android:id="@+id/radio_chistes"
            android:text="Modo Chistes"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </RadioGroup>

    <!-- CheckBoxes -->
    <CheckBox
        android:id="@+id/check_sonido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activar sonido"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_modo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp" />

    <CheckBox
        android:id="@+id/check_animaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mostrar animaciones"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_modo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp" />

    <!-- DatePicker -->
    <DatePicker
        android:id="@+id/datepicker_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/check_sonido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón aceptar -->
    <Button
        android:id="@+id/btn_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_conf_btn_accept"
        android:textColor="@color/white"
        android:backgroundTint="@color/color_default_button"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
